[package]
authors = ["cksac <cs.cksac@gmail.com>"]
name = "symexpr"
version = "0.4.0"
description = "A libray to build symbolic expression and evaluation."
keywords = ["expression", "evaluate", "symbolic"]
categories = ["science"]
edition = "2024"
repository = "https://github.com/cksac/symexpr"
homepage = "https://github.com/cksac/symexpr"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
symbol_table = { version = "0.4.0", features = ["global"] }
